test/trivial/deitz/integers/negate_uint32.good
negate_uint32.chpl:3: error: illegal use of '-' on operand of type uint(32)
