test/trivial/deitz/integers/negate_uint32.chpl
var ui : uint(32) = 2:uint(32)**15;

writeln(-ui);
